--- a/css/page.css
+++ b/css/page.css
@@ -1,7 +1,7 @@
 /* Demo specific css */
 *                      { margin: 0; padding: 0; }
 body                   { font: 12px Georgia, Serif; }
-a, a img               { border: 0; text-decoration: none; outline: 0; }
+a, a img               { border: 0; text-decoration: none; }
 
 #page-wrap             { width: 90%; padding: 15px; background: white; margin: 0 auto 50px; position: relative; }
 
